rest-logger/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotos-rest-logger-service
  namespace: golem
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: spotos-rest-logger
  type: LoadBalancer
