rest-logger/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotos-rest-logger-ingress
  namespace: golem
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spotos-rest-logger-service
            port:
              number: 3000
